--- a/Django/typing_pratice/typingapp/templates/sigininpage.html
+++ b/Django/typing_pratice/typingapp/templates/sigininpage.html
@@ -7,30 +7,66 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-   {% load static %}
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <style>
+    body {
+      background-color: #000000;
+    }
+  </style>
   </head>
   <body>
+
+    <header>
+      <nav class="navbar navbar-dark bg-dark justify-content-between">
+        <a class="navbar-brand fw-bolder">Typing Practice</a>
+        <form class="form-inline">
+            <!--home icons-->
+            <a class="btn btn-outline-warning" href="startuppage.html">
+                <span class="material-symbols-outlined" style="color: rgb(253, 253, 253);">
+                  Home
+                </span>
+            </a>
+            <!--Notification icons-->
+            <a class="btn btn-outline-warning" href="#">
+                <span class="material-symbols-outlined" style="color: white;">
+                  Notifications
+                </span>
+            </a>
+            <!--User Icon-->
+            <a class="btn btn-outline-warning" href="signinpage.html">
+                <span class="material-symbols-outlined" style="color: white;">
+                  person
+                </span>
+            </a>
+        </form>
+    </nav>
+    </header>
     <!-- Section: Design Block -->
 <section class="text-center">
   <!-- Background image -->
   <div class="p-5 bg-image" style="
-      background-color: skyblue;
-      width: 100%;
-        height: 300px;
-        "></div>
+ background-color: grey;
+ background-image: url('../static/msgkeyboard.gif');
+ background-repeat: no-repeat;
+ background-size: cover;
+ background-position: center center;
+ position: relative;
+ width: 100%;
+ height: 300px;
+"></div>
   <!-- Background image -->
 
   <div class="card mx-4 mx-md-5 shadow-5-strong" style="
         margin-top: -100px;
-        background: hsla(0, 0%, 100%, 0.8);
+        background:  hsla(0, 0%, 0%, 0);
         backdrop-filter: blur(30px);
         ">
     <div class="card-body py-5 px-md-5">
 
-      <div class="row d-flex justify-content-center">
+      <div class="row d-flex justify-content-center" style="color: goldenrod; background-color: #00000000;">
         <div class="col-lg-8">
-            <h1 style="font-family: lucida calligraphy;">Typing_Practices</h1>
+            <h1 style="font-family: lucida calligraphy;">Typing Practices</h1>
             <hr>
           <h2 class="fw-bold mb-5">Sign in now</h2>
           <form>
@@ -58,7 +94,7 @@
             </div>
 
             <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">
+            <button type="submit" class="btn btn-warning btn-block mb-4">
               Sign in
             </button>
             
