--- a/Django/typing_pratice/typingapp/templates/sigininpage.html
+++ b/Django/typing_pratice/typingapp/templates/sigininpage.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    {%load static %}
     <meta charset="utf-8">
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,7 +23,7 @@
         <a class="navbar-brand fw-bolder">Typing Practice</a>
         <form class="form-inline">
             <!--home icons-->
-            <a class="btn btn-outline-warning" href="startuppage.html">
+            <a class="btn btn-outline-warning" href="/index">
                 <span class="material-symbols-outlined" style="color: rgb(253, 253, 253);">
                   Home
                 </span>
@@ -34,7 +35,7 @@
                 </span>
             </a>
             <!--User Icon-->
-            <a class="btn btn-outline-warning" href="signinpage.html">
+            <a class="btn btn-warning" href="/sigininpage">
                 <span class="material-symbols-outlined" style="color: white;">
                   person
                 </span>
@@ -44,17 +45,16 @@
     </header>
     <!-- Section: Design Block -->
 <section class="text-center">
-  <!-- Background image -->
   <div class="p-5 bg-image" style="
- background-color: grey;
- background-image: url('../static/msgkeyboard.gif');
- background-repeat: no-repeat;
- background-size: cover;
- background-position: center center;
- position: relative;
- width: 100%;
- height: 300px;
-"></div>
+  background-color: grey;
+  background-image: url('{% static 'msgkeyboard.gif' %}');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  width: 100%;
+  height: 300px;
+ "></div>>
   <!-- Background image -->
 
   <div class="card mx-4 mx-md-5 shadow-5-strong" style="
@@ -110,6 +110,9 @@
     </div>
   </div>
 </section>
+<footer>
+  &copy; 2024 Typing Practice | Developed by Sivabharathi
+</footer>
 <!-- Section: Design Block -->
   </body>
 </html>
