--- a/Django/typing_pratice/typingapp/templates/signuppage.html
+++ b/Django/typing_pratice/typingapp/templates/signuppage.html
@@ -70,8 +70,8 @@
           <h1 style="font-family: lucida calligraphy;">Typing Practice</h1>
             <hr>
           <h2 class="fw-bold mb-5">Sign up now</h2>
-          <form>
-
+          <form method="POST" action="{% url 'signuppage' %}">
+            {% csrf_token %}
             <div class="form-outline mb-4">
                 <input type="user" id="username" name="username" class="form-control"  placeholder="@Username"/>
                 <label class="form-label" for="form3Example3">Username</label>
@@ -80,13 +80,13 @@
             <div class="row">
               <div class="col-md-6 mb-4">
                 <div class="form-outline">
-                  <input type="text" id="fname" name="fname" class="form-control" placeholder="Enter the first name"/>
+                  <input type="text" id="fname" name="first_name" class="form-control" placeholder="Enter the first name"/>
                   <label class="form-label" for="form3Example1">First name</label>
                 </div>
               </div>
               <div class="col-md-6 mb-4">
                 <div class="form-outline">
-                  <input type="text" id="lname" name="lname" class="form-control" placeholder="Enter the last name"/>
+                  <input type="text" id="lname" name="last_name" class="form-control" placeholder="Enter the last name"/>
                   <label class="form-label" for="form3Example2">Last name</label>
                 </div>
               </div>
@@ -100,11 +100,11 @@
 
             <!-- Password input -->
             <div class="form-outline mb-4">
-              <input type="password" id="pass1" name="pass1" class="form-control" placeholder="Enter 8 character" />
+              <input type="password" id="pass1" name="password" class="form-control" placeholder="Enter 8 character" />
               <label class="form-label" for="form3Example4" >Password</label>
             </div>
             <div class="form-outline mb-4">
-                <input type="password" id="pass2" name="pass2" class="form-control" placeholder="Retype Password" />
+                <input type="password" id="pass2" name="confirm_password" class="form-control" placeholder="Retype Password" />
                 <label class="form-label" for="form3Example4" > Confirm Password</label>
               </div>
 
