Adding content to homepage

--- a/Django/typing_pratice/typingapp/templates/index.html
+++ b/Django/typing_pratice/typingapp/templates/index.html
@@ -15,6 +15,12 @@
         
 </head>
 <style>
+    body{
+        background-color: #212121;
+    }
+    h1{
+        color: goldenrod;
+    }
     .info{
         padding-top: 5px;
         background-color: #212121
@@ -67,6 +73,26 @@
     <h1 class="user" style="color:rgb(207, 165, 57); display: inline-block;">{{ user.first_name }}</h1>
 </b>
 </div>
+<br>
+<hr style="background-color: goldenrod;;">
+<div class="content" style="background-color: #212121; color: rgb(226, 217, 217);">
+    <h1>Easy Mode</h1>
+    <p>Our Easy Mode is perfect for beginners who are just starting their typing journey. It focuses on accuracy and helps build a strong foundation for typing.</p>
+    <ul>
+        <li>Accuracy First: Type each word correctly before moving to the next.</li>
+        <li>Error Correction: Practice error-free typing by correcting mistakes as you go.</li>
+        <li>Beginner-Friendly: Ideal for those who want to develop proper typing habits.</li>
+    </ul>
+    <hr style="color: goldenrod;;">
+    <h1>Hard Mode</h1>
+<p>For advanced typists looking to challenge themselves, our Hard Mode provides a more intense practice environment.</p>
+            <ul>
+                <li>Timed Sessions: Set your own time limits to test and improve your typing speed.</li>
+                <li>Performance Metrics: Track your words per minute (WPM) and accuracy without having to correct every mistake.</li>
+                <li>Skill Development: Push your boundaries and enhance your typing efficiency.</li>
+            </ul>
+            <hr style="color: goldenrod;">
+</div>
     <div class="page">
         <h1>Welcome to Typing Practice</h1>
       
@@ -82,14 +108,7 @@
         </div>
        
     </div>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      <br>
+    
       </div>
     </div>
     
