--- a/Django/typing_pratice/typingapp/templates/index.html
+++ b/Django/typing_pratice/typingapp/templates/index.html
@@ -70,7 +70,7 @@
     <div class="info">
     <h1 style="color: goldenrod; display: inline-block;">Welcome, </h1>
     <b>
-    <h1 class="user" style="color:rgb(207, 165, 57); display: inline-block;">{{ user.first_name }}</h1>
+    <h2 class="user" style="color:rgb(209, 206, 200); display: inline-block;">{{ user.username}}</h2>
 </b>
 </div>
 <br>
